set(LIB_SRC 
    nginx.c
    ngx_array.c
    ngx_buf.c
    ngx_conf_file.c
    ngx_connection.c
    ngx_cpuinfo.c
    ngx_crc32.c
    ngx_crypt.c
    ngx_cycle.c
    ngx_file.c
    ngx_hash.c
    ngx_inet.c
    ngx_list.c
    ngx_log.c
    ngx_md5.c
    ngx_module.c
    ngx_murmurhash.c
    ngx_open_file_cache.c
    ngx_output_chain.c
    ngx_palloc.c
    ngx_parse.c
    ngx_parse_time.c
    ngx_proxy_protocol.c
    ngx_queue.c
    ngx_radix_tree.c
    ngx_rbtree.c
    ngx_resolver.c
    ngx_rwlock.c
    ngx_sha1.c
    ngx_shmtx.c
    ngx_slab.c
    ngx_spinlock.c
    ngx_string.c
    ngx_syslog.c
    ngx_times.c
)

add_library(ngxcore ${LIB_SRC})

